// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Bar gives child elements the correct classes 1`] = `
<nav
  className="css-1b6p5hc"
>
  <a
    className="flex-initial rounded-lg bg-white text-purple p-3 no-underline"
    href="/test"
  />
</nav>
`;

exports[`Button Bar renders correctly 1`] = `
<nav
  className="css-1b6p5hc"
/>
`;
